# EddieRobot

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: eddie_serial_driver.pc
devel/share/eddie_serial_driver/cmake/: eddie_serial_driverConfig.cmake
src/: keypress.py  socket_client.py
src/eddie_serial_driver/: CMakeLists.txt  eddie.py  eddie_remote_publisher.py  package.xml  serial_driver.py  shape_camera.py  socket_server.py
