<?xml version="1.0"?>
<package>
  <name>eddie_serial_driver</name>
  <version>0.0.0</version>
  <description>The eddie_serial_driver package</description>

  <maintainer email="kevlangelo@todo.todo">kevlangelo</maintainer>


  <license>TODO</license>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
